Add button to banner & turn nav into grid nav

--- a/index.html
+++ b/index.html
@@ -8,32 +8,36 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Candal|Josefin+Slab" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Josefin+Slab" rel="stylesheet">
 </head>
 <body>
 
   <header class="masthead island-1-2">
     <div class="logo unit xs-1 s-1 m-1 l-1-4">
-      <img src="images/peterborough-hs-logo.svg" alt="logo">
+      <a href="index.html"><img src="images/peterborough-hs-logo.svg" alt="logo"></a>
     </div>
     <nav>
       <input type="checkbox" class="nav-check" id="nav-check">
       <label class="nav-label" for="nav-check">
-        <img src="images/nav-icon.svg" alt="Open Navigation">
+        <img class="nav-open" src="images/nav-icon.svg" alt="Open Navigation">
+        <img class="nav-close" src="images/nav-icon-close.svg" alt="Close Navigation">
       </label>
-      <ul class="nav">
+      <ul class="nav mega">
         <li><a href="#">Home</a></li>
         <li><a href="#">Rescue</a></li>
         <li><a href="#">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <div class="banner">
     <div class="banner-content wrapper pad-b gutter-1-2">
-      <h1>BETTER TOGETHER</h1>
-      <p class="push-0 yotta">Shire Greens farms and distributes all your greenery needs: bows for building, needles for roofing, fronds for shade & much more.
+      <h1 class="zetta">BRING HOME A WINNER</h1>
+      <p class="push-0 yotta">Proin non lorem dui. Vestibulum elit metus, interdum at tortor et, viverra congue magna.</p>
+      <a class="block gutter pad-t-1-2 pad-b-1-2 milli" href="#">ADOPT!</a>
     </div>
   </div>
 
