Add favicon // minor adjustments to media queries

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon-196.png">
   <link href="https://fonts.googleapis.com/css?family=Oswald|Josefin+Slab" rel="stylesheet">
 </head>
 <body>
@@ -36,8 +38,8 @@
   <div class="banner">
     <div class="banner-content wrapper pad-b gutter-1-2">
       <h1 class="zetta">BRING HOME A WINNER</h1>
-      <p class="push-0 yotta">Proin non lorem dui. Vestibulum elit metus, interdum at tortor et, viverra congue magna.</p>
-      <a class="block gutter pad-t-1-2 pad-b-1-2 milli" href="#">ADOPT!</a>
+      <p class="push-0 exa">Proin non lorem dui. Vestibulum elit metus, interdum at tortor et, viverra congue magna.</p>
+      <a class="block gutter pad-t-1-2 pad-b-1-2 milli" href="#">ADOPT</a>
     </div>
   </div>
 
