Style nav for large screens

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <link href="css/main.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="favicon-196.png">
-  <link href="https://fonts.googleapis.com/css?family=Oswald|Josefin+Slab" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Bitter" rel="stylesheet">
 </head>
 <body>
 
   <header class="masthead island-1-2">
     <div class="logo unit xs-1 s-1 m-1 l-1-4">
-      <a href="index.html"><img src="images/peterborough-hs-logo.svg" alt="logo"></a>
+      <a href="index.html"><img src="images/phs-logo.svg" alt="logo"></a>
     </div>
     <nav>
       <input type="checkbox" class="nav-check" id="nav-check">
