Add footer nav & temporary content // minor adjustments

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <ul class="skip-links">
     <li><a href="#nav">Jump to navigation</a></li>
     <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#footer-nav">Jump to main footer navigation</a></li>
   </ul>
 
   <header class="masthead island-1-2" role="banner">
@@ -24,7 +25,7 @@
       <a href="index.html"><img src="images/phs-logo.svg" alt="logo"></a>
     </div>
     <nav role="navigation" id="nav">
-      <input type="checkbox" class="nav-check" id="nav-check">
+      <input type="checkbox" class="nav-check" id="nav-check" tabindex="0">
       <label class="nav-label" for="nav-check">
         <img class="nav-open" src="images/nav-icon.svg" alt="Open Navigation">
         <img class="nav-close" src="images/nav-icon-close.svg" alt="Close Navigation">
@@ -45,12 +46,31 @@
       <div class="banner-content wrapper pad-b gutter-1-2">
         <h1 class="zetta">BRING HOME A WINNER</h1>
         <p class="push-0 exa">Proin non lorem dui. Vestibulum elit metus, interdum at tortor et, viverra congue magna.</p>
-        <a class="block gutter pad-t-1-2 pad-b-1-2 milli" href="#">ADOPT</a>
+        <a class="btn gutter pad-t-1-2 pad-b-1-2 milli" href="#">ADOPT</a>
       </div>
+    </div>
+
+    <div class="section">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in enim id est maximus pellentesque in nec nulla. Vestibulum a libero sed nunc congue fermentum. Nulla vel mattis libero, id congue est. Praesent volutpat accumsan pellentesque. Nulla blandit nisl in rutrum ultricies. Fusce vel orci nec mi pharetra vulputate. Proin gravida rhoncus pharetra. Nulla facilisi. Integer mollis, tortor eu ullamcorper placerat, nisi eros pellentesque mi, at commodo felis ligula sit amet purus. Ut tortor ante, accumsan non metus nec, suscipit tempus tortor. Etiam tincidunt ligula sed auctor molestie. Fusce id tempor massa. Phasellus id tellus sed lacus congue pellentesque commodo vitae neque.</p>
+      <p>Cras efficitur leo in erat molestie, ac molestie quam tristique. Nulla sollicitudin elit vitae felis dignissim, in hendrerit urna aliquet. Nam tincidunt eleifend dui a bibendum. Quisque aliquam hendrerit efficitur. Donec maximus nunc scelerisque odio ultrices, ut scelerisque mauris consequat. Mauris dictum purus vel euismod maximus. Quisque dignissim lorem id ante ornare, at cursus dui euismod. Nam congue mollis mi, sit amet consequat arcu.</p>
+      <p>Vestibulum vulputate sapien elit, et auctor nunc aliquam aliquam. Maecenas a luctus leo. Morbi orci lorem, interdum vitae mi quis, consectetur tincidunt nisl. Nullam vestibulum velit gravida mi congue, eu tincidunt orci facilisis. Quisque suscipit arcu pulvinar, vehicula purus non, finibus lectus. Suspendisse dui diam, hendrerit at eleifend sed, suscipit a urna. Maecenas tristique risus nisi, et sagittis turpis ullamcorper ac. Nunc hendrerit justo non malesuada tristique. Aenean vitae ligula tempor tortor consectetur tempus sit amet a est. Ut elit leo, volutpat sit amet orci eget, posuere lacinia ante. Donec laoreet diam sed augue dignissim, quis ultrices ipsum interdum. Suspendisse non nisi sapien. Aliquam magna metus, sollicitudin et mollis in, interdum ac mi. Donec cursus lacus non est semper mollis. Mauris aliquam rhoncus elit ac lobortis. Phasellus vestibulum, ligula bibendum sagittis mollis, dui libero lacinia risus, et vestibulum nisl ipsum at velit.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in enim id est maximus pellentesque in nec nulla. Vestibulum a libero sed nunc congue fermentum. Nulla vel mattis libero, id congue est. Praesent volutpat accumsan pellentesque. Nulla blandit nisl in rutrum ultricies. Fusce vel orci nec mi pharetra vulputate. Proin gravida rhoncus pharetra. Nulla facilisi. Integer mollis, tortor eu ullamcorper placerat, nisi eros pellentesque mi, at commodo felis ligula sit amet purus. Ut tortor ante, accumsan non metus nec, suscipit tempus tortor. Etiam tincidunt ligula sed auctor molestie. Fusce id tempor massa. Phasellus id tellus sed lacus congue pellentesque commodo vitae neque.</p>
+      <p>Cras efficitur leo in erat molestie, ac molestie quam tristique. Nulla sollicitudin elit vitae felis dignissim, in hendrerit urna aliquet. Nam tincidunt eleifend dui a bibendum. Quisque aliquam hendrerit efficitur. Donec maximus nunc scelerisque odio ultrices, ut scelerisque mauris consequat. Mauris dictum purus vel euismod maximus. Quisque dignissim lorem id ante ornare, at cursus dui euismod. Nam congue mollis mi, sit amet consequat arcu.</p>
+      <p>Vestibulum vulputate sapien elit, et auctor nunc aliquam aliquam. Maecenas a luctus leo. Morbi orci lorem, interdum vitae mi quis, consectetur tincidunt nisl. Nullam vestibulum velit gravida mi congue, eu tincidunt orci facilisis. Quisque suscipit arcu pulvinar, vehicula purus non, finibus lectus. Suspendisse dui diam, hendrerit at eleifend sed, suscipit a urna. Maecenas tristique risus nisi, et sagittis turpis ullamcorper ac. Nunc hendrerit justo non malesuada tristique. Aenean vitae ligula tempor tortor consectetur tempus sit amet a est. Ut elit leo, volutpat sit amet orci eget, posuere lacinia ante. Donec laoreet diam sed augue dignissim, quis ultrices ipsum interdum. Suspendisse non nisi sapien. Aliquam magna metus, sollicitudin et mollis in, interdum ac mi. Donec cursus lacus non est semper mollis. Mauris aliquam rhoncus elit ac lobortis. Phasellus vestibulum, ligula bibendum sagittis mollis, dui libero lacinia risus, et vestibulum nisl ipsum at velit.</p>
     </div>
   </main>
 
   <footer>
+    <nav>
+      <ul class="footer-nav mega">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Rescue</a></li>
+        <li><a href="#">Adopt</a></li>
+        <li><a href="#">Surrender</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
   </footer>
 
 </body>
