Add adopt & recsue pages / center footer nav

--- a/rescues.html
+++ b/rescues.html
@@ -1,8 +1,9 @@
+<!--Animal Bios. Max 6 -->
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Peterborough Humane Society</title>
+  <title>Rescues | Peterborough Humane Society</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -13,7 +14,6 @@
   <link href="https://fonts.googleapis.com/css?family=Oswald|Bitter" rel="stylesheet">
 </head>
 <body>
-
   <ul class="skip-links">
     <li><a href="#nav">Jump to navigation</a></li>
     <li><a href="#main">Jump to main content</a></li>
@@ -31,7 +31,7 @@
         <img class="nav-close" src="images/nav-icon-close.svg" alt="Close Navigation">
       </label>
       <ul class="nav mega">
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="rescues.html">Rescues</a></li>
         <li><a href="adopt.html">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
@@ -42,13 +42,6 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <div class="banner">
-      <div class="banner-content wrapper pad-b gutter-1-2">
-        <h1 class="zetta">BRING HOME A WINNER</h1>
-        <p class="push-0 exa">Proin non lorem dui. Vestibulum elit metus, interdum at tortor et, viverra congue magna.</p>
-        <a class="btn gutter pad-t-1-2 pad-b-1-2 milli" href="rescues.html">VIEW RESCUES</a>
-      </div>
-    </div>
 
     <div class="section">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in enim id est maximus pellentesque in nec nulla. Vestibulum a libero sed nunc congue fermentum. Nulla vel mattis libero, id congue est. Praesent volutpat accumsan pellentesque. Nulla blandit nisl in rutrum ultricies. Fusce vel orci nec mi pharetra vulputate. Proin gravida rhoncus pharetra. Nulla facilisi. Integer mollis, tortor eu ullamcorper placerat, nisi eros pellentesque mi, at commodo felis ligula sit amet purus. Ut tortor ante, accumsan non metus nec, suscipit tempus tortor. Etiam tincidunt ligula sed auctor molestie. Fusce id tempor massa. Phasellus id tellus sed lacus congue pellentesque commodo vitae neque.</p>
@@ -63,8 +56,8 @@
   <footer role="contentinfo">
     <nav>
       <ul class="footer-nav mega">
-        <li><a href="#">Home</a></li>
-        <li><a href="rescues.html">Rescue</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Rescues</a></li>
         <li><a href="adopt.html">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
         <li><a href="#">Shop</a></li>
@@ -72,6 +65,5 @@
       </ul>
     </nav>
   </footer>
-
 </body>
 </html>
