Style active page on nav

--- a/adopt.html
+++ b/adopt.html
@@ -34,7 +34,7 @@
       <ul class="nav mega">
         <li><a href="index.html">Home</a></li>
         <li><a href="rescues.html">Rescues</a></li>
-        <li><a href="adopt.html">Adopt</a></li>
+        <li><a class="nav-active" href="adopt.html">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
         <li><a href="#">Shop</a></li>
         <li><a href="#">Contact</a></li>
@@ -59,7 +59,7 @@
       <ul class="footer-nav mega">
         <li><a href="index.html">Home</a></li>
         <li><a href="rescues.html">Rescues</a></li>
-        <li><a href="#">Adopt</a></li>
+        <li><a class="nav-active" href="#">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
         <li><a href="#">Shop</a></li>
         <li><a href="#">Contact</a></li>
