--- a/rescues.html
+++ b/rescues.html
@@ -32,7 +32,7 @@
       </label>
       <ul class="nav mega">
         <li><a href="index.html">Home</a></li>
-        <li><a href="rescues.html">Rescues</a></li>
+        <li><a class="nav-active" href="rescues.html">Rescues</a></li>
         <li><a href="adopt.html">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
         <li><a href="#">Shop</a></li>
@@ -57,7 +57,7 @@
     <nav>
       <ul class="footer-nav mega">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Rescues</a></li>
+        <li><a class="nav-active" href="#">Rescues</a></li>
         <li><a href="adopt.html">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
         <li><a href="#">Shop</a></li>
