--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img class="nav-close" src="images/nav-icon-close.svg" alt="Close Navigation">
       </label>
       <ul class="nav mega">
-        <li><a href="#">Home</a></li>
+        <li><a class="nav-active" href="#">Home</a></li>
         <li><a href="rescues.html">Rescues</a></li>
         <li><a href="adopt.html">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
@@ -63,8 +63,8 @@
   <footer role="contentinfo">
     <nav>
       <ul class="footer-nav mega">
-        <li><a href="#">Home</a></li>
-        <li><a href="rescues.html">Rescue</a></li>
+        <li><a class="nav-active" href="#">Home</a></li>
+        <li><a href="rescues.html">Rescues</a></li>
         <li><a href="adopt.html">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
         <li><a href="#">Shop</a></li>
