Add gradient and text to banner

--- a/adopt.html
+++ b/adopt.html
@@ -1,4 +1,4 @@
-<!-- Form  min ten fields -->
+<!-- Form min ten fields -->
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
@@ -59,12 +59,13 @@
       <ul class="footer-nav mega">
         <li><a href="index.html">Home</a></li>
         <li><a href="rescues.html">Rescues</a></li>
-        <li><a class="nav-active" href="#">Adopt</a></li>
+        <li><a class="footer-active" href="#">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
         <li><a href="#">Shop</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+    <small>© Peterborough Humane Society • 2018</small>
   </footer>
 
 </body>
