--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="banner">
       <div class="banner-content wrapper pad-b gutter-1-2">
         <h1 class="zetta">BRING HOME A WINNER</h1>
-        <p class="push-0 exa">Proin non lorem dui. Vestibulum elit metus, interdum at tortor et, viverra congue magna.</p>
-        <a class="btn gutter pad-t-1-2 pad-b-1-2 milli" href="rescues.html">VIEW RESCUES</a>
+        <p class="push-0 exa">Rescue an animal today and provide it with the opportunity to become a real champion!</p>
+        <a class="btn gutter pad-t-1-4 pad-b-1-2 milli" href="rescues.html">VIEW RESCUES</a>
       </div>
     </div>
 
@@ -60,10 +60,10 @@
     </div>
   </main>
 
-  <footer role="contentinfo">
+  <footer role="contentinfo" id="footer" tabindex="0">
     <nav>
       <ul class="footer-nav mega">
-        <li><a class="nav-active" href="#">Home</a></li>
+        <li><a class="footer-active" href="#">Home</a></li>
         <li><a href="rescues.html">Rescues</a></li>
         <li><a href="adopt.html">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
@@ -71,6 +71,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+    <small>© Peterborough Humane Society • 2018</small>
   </footer>
 
 </body>
