--- a/rescues.html
+++ b/rescues.html
@@ -57,13 +57,14 @@
     <nav>
       <ul class="footer-nav mega">
         <li><a href="index.html">Home</a></li>
-        <li><a class="nav-active" href="#">Rescues</a></li>
+        <li><a class="footer-active" href="#">Rescues</a></li>
         <li><a href="adopt.html">Adopt</a></li>
         <li><a href="#">Surrender</a></li>
         <li><a href="#">Shop</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+    <small>© Peterborough Humane Society • 2018</small>
   </footer>
 </body>
 </html>
