Style about section, add grids & image

--- a/rescues.html
+++ b/rescues.html
@@ -42,7 +42,7 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
-
+    <h1>RESCUES</h1>
     <div class="section">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in enim id est maximus pellentesque in nec nulla. Vestibulum a libero sed nunc congue fermentum. Nulla vel mattis libero, id congue est. Praesent volutpat accumsan pellentesque. Nulla blandit nisl in rutrum ultricies. Fusce vel orci nec mi pharetra vulputate. Proin gravida rhoncus pharetra. Nulla facilisi. Integer mollis, tortor eu ullamcorper placerat, nisi eros pellentesque mi, at commodo felis ligula sit amet purus. Ut tortor ante, accumsan non metus nec, suscipit tempus tortor. Etiam tincidunt ligula sed auctor molestie. Fusce id tempor massa. Phasellus id tellus sed lacus congue pellentesque commodo vitae neque.</p>
       <p>Cras efficitur leo in erat molestie, ac molestie quam tristique. Nulla sollicitudin elit vitae felis dignissim, in hendrerit urna aliquet. Nam tincidunt eleifend dui a bibendum. Quisque aliquam hendrerit efficitur. Donec maximus nunc scelerisque odio ultrices, ut scelerisque mauris consequat. Mauris dictum purus vel euismod maximus. Quisque dignissim lorem id ante ornare, at cursus dui euismod. Nam congue mollis mi, sit amet consequat arcu.</p>
