--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div class="banner">
       <div class="banner-content wrapper pad-b gutter-1-2">
         <h1 class="zetta">SPREAD A LITTLE LOVE</h1>
-        <p class="push-0 exa">Rescue an animal today and provide it with the opportunity to become a true champion!</p>
-        <a class="btn gutter pad-t-1-4 pad-b-1-2 milli" href="rescues.html">VIEW RESCUES</a>
+        <p class="exa">Rescue an animal today and provide it with the opportunity to become a true champion!</p>
+        <a class="ghost-btn gutter pad-t-1-4 pad-b-1-2 milli" href="rescues.html">VIEW RESCUES</a>
       </div>
     </div>
     <div>
@@ -63,6 +63,19 @@
         </div>
         <div class="unit s-1 m-1 l-2-3 xl-3-4">
           <article>Cras efficitur leo in erat molestie, ac molestie quam tristique. Nulla sollicitudin elit vitae felis dignissim, in hendrerit urna aliquet. Nam tincidunt eleifend dui a bibendum. Quisque aliquam hendrerit efficitur. Donec maximus nunc scelerisque odio ultrices, ut scelerisque mauris consequat. Mauris dictum purus vel euismod maximus. Quisque dignissim lorem id ante ornare, at cursus dui euismod. Nam congue mollis mi, sit amet consequat arcu.</article>
+        </div>
+        <div class="unit xl-1 newsletter">
+          <h2 class="unit s-1 m-1 l-1 xl-1">NEWSLETTER</h2>
+          <div class="unit s-1 m-1 l-1-2 xl-1-2">
+            <article>Subscribe to the Peterborough Humane Society's monthly newsletter to stay up to date on the latest rescue animals and so much more!</article>
+          </div>
+          <div class="unit s-1 m-1 l-1-2 xl-1-2">
+            <form action="#" method="post">
+              <label class="giga" for="email">E-mail Address</label>
+              <input type="email" id="email" placeholder="your@email.com">
+              <button class="btn" type="submit">SUBMIT</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
